--- a/src/app/input-form/input-form.component.html
+++ b/src/app/input-form/input-form.component.html
@@ -2,5 +2,7 @@
   <p>{{body}}</p>
 </div>
 
-<input type="text" placeholder="ここにメッセージを入力" [(ngModel)]="text">
-<button (click)="send()">送信</button>
+<div id="input-field">
+  <input type="text" id="chat-form" placeholder="ここにメッセージを入力" [(ngModel)]="text">
+  <button (click)="send()">送信</button>
+</div>
